--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/main.ts",
+    "test": "set NODE_ENV=test && set NODE_OPTIONS=--experimental-vm-modules && tsc && npx jest --verbose",
+    "dev": "set NODE_ENV=develop && ts-node-dev --respawn src/main.ts",
     "build": "tsc",
-    "start": "node dist/main.js"
+    "start": "set NODE_ENV=production && node dist/main.js"
   },
   "keywords": [],
   "author": "",
@@ -27,9 +28,12 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.0",
+    "jest": "^29.6.1",
+    "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   }
